# TeamAI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
examples/minimal/: team.yaml
examples/pipeline/: team.yaml
scripts/: check_examples.py  check_import_rules.py
src/teamai/: __init__.py  conductor.py  runtime.py
src/teamai/agents/: base.py  critic.py  finalizer.py  planner.py  specialist.py
src/teamai/cli/: app.py  init.py
src/teamai/config/: examples.py  loader.py  models.py  schema.py  validator.py
src/teamai/core/: budgets.py  domain.py  errors.py  events.py  protocols.py  routing.py  states.py
src/teamai/human/: auto_approve.py  reject.py  terminal.py
src/teamai/persistence/: sqlite.py
src/teamai/providers/: audit.py  fake.py  openai_compatible.py  registry.py
src/teamai/telemetry/: redaction.py
src/teamai/tools/: base.py  broker.py
src/teamai/tools/builtin/: filesystem.py
src/teamai/workflows/: pipeline.py  plan_execute_review.py  task_execution.py  validation.py
tests/e2e/: test_fake_team_run.py
tests/unit/: test_ci_workflow.py  test_cli.py  test_config.py  test_examples.py  test_filesystem_tools.py  test_import_rules.py  test_openai_compatible_provider.py  test_plan_validation.py  test_project_metadata.py  test_sqlite_store.py  test_structured_output_retry.py  test_tool_broker.py
